--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,6 @@
+Changes in version 0.99.0 (2019-04-11)
++ Multi-dataset alignment
++ Partial labels
++ Updated decoder architectures
 Changes in version 0.99.0 (2019-02-05)
 + Submitted to Bioconductor
